Removed comments that were used for my visual aid

--- a/index.html
+++ b/index.html
@@ -19,20 +19,20 @@
       </header>
       <main>
         <div class="main-container">
-          <div class="main-color color1">color1</div>
-          <div class="main-color color2">color2</div>
-          <div class="main-color color3">color3</div>
-          <div class="main-color color4">color4</div>
-          <div class="main-color color5">color5</div>
+          <div class="main-color color1"></div>
+          <div class="main-color color2"></div>
+          <div class="main-color color3"></div>
+          <div class="main-color color4"></div>
+          <div class="main-color color5"></div>
         </div>
       </main>
       <footer>
         <div class="footer-container">
-          <div class="footer-color color-hex1">color-hex1</div>
-          <div class="footer-color color-hex2">color-hex2</div>
-          <div class="footer-color color-hex3">color-hex3</div>
-          <div class="footer-color color-hex4">color-hex4</div>
-          <div class="footer-color color-hex5">color-hex5</div>
+          <div class="footer-color color-hex1">#F55A5A</div>
+          <div class="footer-color color-hex2">#2B283A</div>
+          <div class="footer-color color-hex3">#FBF3AB</div>
+          <div class="footer-color color-hex4">#AAD1B6</div>
+          <div class="footer-color color-hex5">#A626D3</div>
         </div>
       </footer>
     </div>
